@@ -1,5 +1,5 @@
 /* PrinterJob.java -- This job is the printer control class
-   Copyright (C) 1999 Free Software Foundation, Inc.
+   Copyright (C) 1999, 2004  Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -37,229 +37,183 @@ exception statement from your version. */
 
 
 package java.awt.print;
+
+import javax.print.DocFlavor;
 import javax.print.PrintService;
+import javax.print.PrintServiceLookup;
+//import javax.print.StreamPrintServiceFactory;
 import javax.print.attribute.PrintRequestAttributeSet;
 
 /**
-  * This class controls printing.
-  *
-  * @author Aaron M. Renn (arenn@urbanophile.com)
-  */
+ * This class controls printing.
+ *
+ * @author Aaron M. Renn (arenn@urbanophile.com)
+ */
 public abstract class PrinterJob
 {
   // The print service associated with this job
   private PrintService printer = null;
 
-/*
- * Class Methods
- */
-
-/**
-  * Creates a new print job.
-  *
-  * @return A <code>PrinterJob</code> object for the newly created print job.
-  */
-public static PrinterJob
-getPrinterJob()
-{
+  /**
+   * Creates a new print job.
+   *
+   * @return A <code>PrinterJob</code> object for the newly created print job.
+   */
+  public static PrinterJob getPrinterJob()
+  {
   // FIXME: Need to fix this to load a default implementation instance.
-  return(null);
-}
+    return null;
+  }
 
-/*************************************************************************/
+  /**
+   * Initializes a new instance of <code>PrinterJob</code>. 
+   */
+  public PrinterJob()
+  {
+  }
 
-/*
- * Constructors
- */
+  /**
+   * Returns the number of copies to be printed.
+   *
+   * @return The number of copies to be printed.
+   */
+  public abstract int getCopies();
 
-/**
-  * Initializes a new instance of <code>PrinterJob</code>. 
-  */
-public
-PrinterJob()
-{
-  ;
-}
+  /**
+   * Sets the number of copies to be printed.
+   *
+   * @param copies The number of copies to be printed.
+   */
+  public abstract void setCopies(int copies);
 
-/*************************************************************************/
+  /**
+   * Returns the name of the print job.
+   *
+   * @return The name of the print job.
+   */
+  public abstract String getJobName();
 
-/*
- * Instance Methods
- */
+  /**
+   * Sets the name of the print job.
+   *
+   * @param job_name The name of the print job.
+   */
+  public abstract void setJobName(String job_name);
 
-/**
-  * Returns the number of copies to be printed.
-  *
-  * @return The number of copies to be printed.
-  */
-public abstract int
-getCopies();
+  /**
+   * Returns the printing user name.
+   *
+   * @return The printing username.
+   */
+  public abstract String getUserName();
 
-/*************************************************************************/
+  /**
+   * Cancels an in progress print job.
+   */
+  public abstract void cancel();
 
-/**
-  * Sets the number of copies to be printed.
-  *
-  * @param copies The number of copies to be printed.
-  */
-public abstract void setCopies (int copies);
+  /**
+   * Tests whether or not this job has been cancelled.
+   *
+   * @return <code>true</code> if this job has been cancelled, <code>false</code>
+   * otherwise.
+   */
+  public abstract boolean isCancelled();
 
-/*************************************************************************/
+  /**
+   * Returns an instance of the default page which will have the default
+   * paper and orientation.
+   *
+   * @return A default instance of <code>PageFormat</code>.
+   */
+  public PageFormat defaultPage()
+  {
+    return new PageFormat();
+  }
 
-/**
-  * Returns the name of the print job.
-  *
-  * @return The name of the print job.
-  */
-public abstract String
-getJobName();
+  /**
+   * Clones the specified <code>PageFormat</code> object then alters the
+   * clone so that it represents the default page format.
+   *
+   * @param page_format The <code>PageFormat</code> to clone.
+   *
+   * @return A new default page format.
+   */
+  public abstract PageFormat defaultPage(PageFormat page_format);
 
-/*************************************************************************/
+  /**
+   * Displays a dialog box to the user which allows the page format
+   * attributes to be modified.
+   *
+   * @param page_format The <code>PageFormat</code> object to modify.
+   *
+   * @return The modified <code>PageFormat</code>.
+   */
+  public abstract PageFormat pageDialog(PageFormat page_format);
 
-/**
-  * Sets the name of the print job.
-  *
-  * @param job_name The name of the print job.
-  */
-public abstract void setJobName (String job_name);
+  /**
+   * Prints the pages.
+   */
+  public abstract void print () throws PrinterException;
 
-/*************************************************************************/
+  /**
+   * Prints the page with given attributes.
+   */
+  public abstract void print (PrintRequestAttributeSet attributes)
+    throws PrinterException;
 
-/**
-  * Returns the printing user name.
-  *
-  * @return The printing username.
-  */
-public abstract String
-getUserName();
+  /**
+   * Displays a dialog box to the user which allows the print job
+   * attributes to be modified.
+   *
+   * @return <code>false</code> if the user cancels the dialog box,
+   * <code>true</code> otherwise.
+   */
+  public abstract boolean printDialog();
 
-/*************************************************************************/
+  /**
+   * Displays a dialog box to the user which allows the print job
+   * attributes to be modified.
+   *
+   * @return <code>false</code> if the user cancels the dialog box,
+   * <code>true</code> otherwise.
+   */
+  public abstract boolean printDialog(PrintRequestAttributeSet attributes);
 
-/**
-  * Cancels an in progress print job.
-  */
-public abstract void
-cancel();
+  /**
+   * This sets the pages that are to be printed.
+   *
+   * @param pageable The pages to be printed, which may not be <code>null</code>.
+   */
+  public abstract void setPageable(Pageable pageable);
 
-/*************************************************************************/
+  /**
+   * Sets this specified <code>Printable</code> as the one to use for
+   * rendering the pages on the print device.
+   *
+   * @param printable The <code>Printable</code> for the print job.
+   */
+  public abstract void setPrintable(Printable printable);
 
-/**
-  * Tests whether or not this job has been cancelled.
-  *
-  * @param <code>true</code> if this job has been cancelled, <code>false</code>
-  * otherwise.
-  */
-public abstract boolean
-isCancelled();
+  /**
+   * Sets the <code>Printable</code> and the page format for the pages
+   * to be printed.
+   *
+   * @param printable The <code>Printable</code> for the print job.
+   * @param page_format The <code>PageFormat</code> for the print job.
+   */
+  public abstract void setPrintable(Printable printable, PageFormat page_format);
 
-/*************************************************************************/
-
-/**
-  * Returns an instance of the default page which will have the default
-  * paper and orientation.
-  *
-  * @return A default instance of <code>PageFormat</code>.
-  */
-public PageFormat
-defaultPage()
-{
-  return(new PageFormat());
-}
-
-/*************************************************************************/
-
-/**
-  * Clones the specified <code>PageFormat</code> object then alters the
-  * clone so that it represents the default page format.
-  *
-  * @param page_format The <code>PageFormat</code> to clone.
-  *
-  * @return A new default page format.
-  */
-public abstract PageFormat
-defaultPage(PageFormat page_format);
-
-/*************************************************************************/
-
-/**
-  * Displays a dialog box to the user which allows the page format
-  * attributes to be modified.
-  *
-  * @param page_format The <code>PageFormat</code> object to modify.
-  *
-  * @return The modified <code>PageFormat</code>.
-  */
-public abstract PageFormat
-pageDialog(PageFormat page_format);
-
-/*************************************************************************/
-
-/**
-  * Prints the pages.
-  */
-public abstract void print () throws PrinterException;
-public abstract void print (PrintRequestAttributeSet attributes) throws PrinterException;
-
-
-/**
-  * Displays a dialog box to the user which allows the print job
-  * attributes to be modified.
-  *
-  * @return <code>false</code> if the user cancels the dialog box,
-  * <code>true</code> otherwise.
-  */
-public abstract boolean
-printDialog();
-
-public abstract boolean 
-printDialog(PrintRequestAttributeSet attributes);
-
-/*************************************************************************/
-
-/**
-  * This sets the pages that are to be printed.
-  *
-  * @param pageable The pages to be printed, which may not be <code>null</code>.
-  */
-public abstract void
-setPageable(Pageable pageable);
-
-/*************************************************************************/
-
-/**
-  * Sets this specified <code>Printable</code> as the one to use for
-  * rendering the pages on the print device.
-  *
-  * @param printable The <code>Printable</code> for the print job.
-  */
-public abstract void
-setPrintable(Printable printable);
-
-/*************************************************************************/
-
-/**
-  * Sets the <code>Printable</code> and the page format for the pages
-  * to be printed.
-  *
-  * @param printable The <code>Printable</code> for the print job.
-  * @param page_format The <code>PageFormat</code> for the print job.
-  */
-public abstract void
-setPrintable(Printable printable, PageFormat page_format);
-
-/*************************************************************************/
-
-/**
-  * Makes any alterations to the specified <code>PageFormat</code>
-  * necessary to make it work with the current printer.  The alterations
-  * are made to a clone of the input object, which is then returned.
-  *
-  * @param page_format The <code>PageFormat</code> to validate.
-  *
-  * @return The validated <code>PageFormat</code>.
-  */
-public abstract PageFormat
-validatePage(PageFormat page);
+  /**
+   * Makes any alterations to the specified <code>PageFormat</code>
+   * necessary to make it work with the current printer.  The alterations
+   * are made to a clone of the input object, which is then returned.
+   *
+   * @param page_format The <code>PageFormat</code> to validate.
+   *
+   * @return The validated <code>PageFormat</code>.
+   */
+  public abstract PageFormat validatePage(PageFormat page_format);
 
   /**
    * Find and return 2D image print services.
@@ -312,7 +266,6 @@ validatePage(PageFormat page);
     return null;
   }
 
-  
   /**
    * Change the printer for this print job to service.  Subclasses that
    * support setting the print service override this method.  Throws
@@ -327,6 +280,4 @@ validatePage(PageFormat page);
   {
     throw new PrinterException();
   }
-
-} // class PrinterJob
-
+}
